crates/antlr-rust-codegen/src/grammar/snapshots/antlr_rust_codegen__grammar__mutual_recursion__tests__assoc_right_preserved.snap
---
source: crates/antlr-rust-codegen/src/grammar/mutual_recursion.rs
assertion_line: 1713
expression: render(&unit)
---
expr:
  | <assoc=right> expr ''^'' expr
  | ID
