crates/antlr-rust-codegen/src/grammar/snapshots/antlr_rust_codegen__grammar__mutual_recursion__tests__caller_alt_label_preserved.snap
---
source: crates/antlr-rust-codegen/src/grammar/mutual_recursion.rs
assertion_line: 1913
expression: render(&unit)
---
e:
  | e ''+'' ID #ViaSatellite
  | ID #Atom
