crates/antlr-rust-codegen/src/grammar/snapshots/antlr_rust_codegen__grammar__mutual_recursion__tests__chained_assoc_carried.snap
---
source: crates/antlr-rust-codegen/src/grammar/mutual_recursion.rs
assertion_line: 1728
expression: render(&unit)
---
e:
  | <assoc=right> e ''^'' e
  | ID
