crates/antlr-rust-codegen/src/grammar/snapshots/antlr_rust_codegen__grammar__mutual_recursion__tests__consecutive_optionals.snap
---
source: crates/antlr-rust-codegen/src/grammar/mutual_recursion.rs
assertion_line: 1619
expression: render(&unit)
---
e:
  | e ''+'' e
  | e e? ''..''
  | e ''..''
  | ''..''
  | ID
