crates/antlr-rust-codegen/src/grammar/snapshots/antlr_rust_codegen__grammar__mutual_recursion__tests__external_satellite_retained.snap
---
source: crates/antlr-rust-codegen/src/grammar/mutual_recursion.rs
assertion_line: 1658
expression: render(&unit)
---
t:
  | t ''['' '']''
  | t ''?''
  | ID
arr:
  | t ''['' '']''
new_arr:
  | ''new'' arr
