crates/antlr-rust-codegen/src/grammar/snapshots/antlr_rust_codegen__grammar__mutual_recursion__tests__name_cycle_collapsed.snap
---
source: crates/antlr-rust-codegen/src/grammar/mutual_recursion.rs
assertion_line: 1566
expression: render(&unit)
---
name:
  | name ''.'' simple_name
  | simple_name
simple_name:
  | ID
