crates/antlr-rust-codegen/src/grammar/snapshots/antlr_rust_codegen__grammar__mutual_recursion__tests__preserved_satellite_retained.snap
---
source: crates/antlr-rust-codegen/src/grammar/mutual_recursion.rs
assertion_line: 1679
expression: render(&fixture.unit)
---
e:
  | e ''+'' ID
  | ID
s:
  | e ''+'' ID
