crates/antlr-rust-codegen/src/grammar/snapshots/antlr_rust_codegen__grammar__mutual_recursion__tests__split_label_on_both_products.snap
---
source: crates/antlr-rust-codegen/src/grammar/mutual_recursion.rs
assertion_line: 1925
expression: render(&unit)
---
e:
  | e ''+'' e #Add
  | e ''..'' #Range
  | ''..'' #Range
  | ID #Atom
